[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "alot"
description = "Terminal MUA using notmuch mail"
authors = [
    {name="Patrick Totzke", email="patricktotzke@gmail.com"}
]
maintainers = [
    {name="Lucas Hoffmann", email="lucc@posteo.de"},
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Email :: Email Clients (MUA)",
    "Topic :: Database :: Front-Ends",
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
]
dependencies = [
    "notmuch2>=0.30",
    "urwid>=1.3.0",
    "urwidtrees>=1.0.3",
    "twisted>=18.4.0",
    "python-magic",
    "configobj>=4.7.0",
    "gpg>1.10.0",
    "standard-mailcap; python_version>'3.12'"
]

[project.optional-dependencies]
docs = ["sphinx"]
tests = ["pytest"]

[project.scripts]
alot = "alot.__main__:main"

[project.urls]
Repository = "https://github.com/pazz/alot"
Documentation = "https://alot.readthedocs.io/en/latest/"
Issues = "https://github.com/pazz/alot/issues"

[tool.setuptools.packages.find]
include = ["alot*"]

[tool.setuptools_scm]
