[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "alot"
description = "Terminal MUA using notmuch mail"
authors = [
    {name="Patrick Totzke", email="patricktotzke@gmail.com"}
]
maintainers = [
    {name="Lucas Hoffmann", email="lucc@posteo.de"},
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Email :: Email Clients (MUA)",
    "Topic :: Database :: Front-Ends",
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
]
dependencies = [
    "notmuch2>=0.34.2",
    "urwid>=1.3.0",
    "urwidtrees>=1.0.3",
    "twisted>=18.4.0",
    "python-magic",
    "configobj>=4.7.0",
    "gpg>1.10.0",
    "standard-mailcap; python_version>'3.12'"
]

[project.optional-dependencies]
docs = ["sphinx"]
tests = ["pytest"]
typing = ["mypy"]

[project.scripts]
alot = "alot.__main__:main"

[project.urls]
Repository = "https://github.com/pazz/alot"
Documentation = "https://alot.readthedocs.io/en/latest/"
Issues = "https://github.com/pazz/alot/issues"

[tool.setuptools.packages.find]
include = ["alot*"]

[tool.setuptools_scm]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true

# Start with a minimal set of typed modules
# We'll gradually add more as we improve type coverage
[[tool.mypy.overrides]]
module = [
    "alot.errors",
    "alot.__init__",
    "alot.utils.cached_property",
]
disallow_untyped_defs = true
